mdapipkg/unpackaged/objects/Handshake_transaction_History__c.object
<CustomObject>
    <fields>
        <fullName>ACT__c</fullName>
        <label>ACT</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Id__c</fullName>
        <label>Account Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity__c</fullName>
        <label>Activity</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core__c</fullName>
        <label>Core</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Time__c</fullName>
        <label>Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dish_Account_Number__c</fullName>
        <label>Dish Account Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Library_id__c</fullName>
        <label>Library id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>Handshake transaction History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Handshake transaction History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Handshake transaction Historys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>